src/objects/PM_Physical_Properties__c.object
<CustomObject>
    <fields>
        <fullName>Parameter__c</fullName>
        <formula>Physical_Properties__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parameter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Properties__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Physical Properties</label>
        <referenceTo>Physical_Properties__c</referenceTo>
        <relationshipLabel>PM Physical Properties</relationshipLabel>
        <relationshipName>PM_Physical_Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipName>Physical_Properties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <formula>Physical_Properties__r.UOM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UOM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>PM Physical Properties</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Value__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PP-{0000000000}</displayFormat>
        <label>Physical Properties Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PM Physical Properties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>